cluster/development/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/version: 4.135.0
  name: code-server
spec:
  selector:
    app.kubernetes.io/name: code-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
